--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,75 @@
 
+@PhDThesis{	  schmitt1996aspect,
+  author	= {Schmitt, Cristina},
+  school	= {University of Maryland},
+  title		= {Aspect and the syntax of noun phrases},
+  year		= {1996}
+}
+
+@PhDThesis{	  doron1983verbless-predic,
+  author	= {Doron, Edit},
+  school	= {Universite of Texas at Austin},
+  title		= {Verbless predicates in Hebrew},
+  year		= {1983}
+}
+
+@InCollection{	  camacho2012ser-and-estar,
+  address	= {Malden, MA},
+  author	= {Camacho, Jose},
+  booktitle	= {The handbook of Hispanic linguistics},
+  editor	= {Hualde, Jos{\'e} Ignacio and Olarrea, Antxon and O`Rourke,
+		  Erin},
+  pages		= {453--476},
+  publisher	= {Blackwell},
+  title		= {Ser and estar: The individual/stage-level distinction and
+		  aspectual predication},
+  year		= {2012}
+}
+
+@InCollection{	  degraff1992the-syntax-of-p,
+  address	= {Amherst},
+  author	= {DeGraff, Michel},
+  booktitle	= {Proceedings of NELS 22},
+  pages		= {103-117},
+  publisher	= {Graduate Linguistic Student Publications, Univ. of
+		  Massachusetts},
+  title		= {The syntax of predication in Haitian},
+  year		= {1992}
+}
+
+@InCollection{	  gueron2003on-the-asymmetr,
+  address	= {Amsterdam},
+  author	= {Gu{\'e}ron, Jacqueline},
+  booktitle	= {Asymmetry in grammar},
+  editor	= {Di Sciullo, Anna Maria},
+  pages		= {145--163},
+  publisher	= {John Benjamins},
+  title		= {On the asymmetry of the specificational copula sentence},
+  year		= {2003}
+}
+
+@InCollection{	  bowers2001predication,
+  address	= {Malden, MA},
+  author	= {Bowers, John},
+  booktitle	= {The handbook of contemporary syntactic theory},
+  editor	= {Baltin, Mark and Collins, Chris},
+  pages		= {299--333},
+  publisher	= {Blackwell},
+  title		= {Predication},
+  year		= {2001}
+}
+
+@InBook{	  mikkelsen2011copular-clauses,
+  address	= {Berlin},
+  author	= {Mikkelsen, Line},
+  editor	= {von Heusinger, Klaus and Maienborn, Claudia and Portner,
+		  Paul},
+  pages		= {1805--1829},
+  publisher	= {Mouton de Gruyter},
+  title		= {Copular clauses},
+  year		= {2011}
+}
+
 @Article{	  bosque1993catafora,
   author	= {Bosque, Ignacio},
   journal	= {Cuadernos de ling{\"u}{\'i}stica del Instituto
@@ -45096,4 +45167,219 @@
 		  {Western} {European} languages from a typological and
 		  diachronic perspective},
   year		= {2015}
+}
+
+@Book{		  2007existence-sema,
+  address	= {Dordrecht, The Netherlands},
+  editor	= {Comorovski, Ileana and Von Heusinger, Klaus},
+  publisher	= {Springer},
+  title		= {Existence: semantics and syntax},
+  year		= {2007}
+}
+
+@Article{	  eide1999the-syntactic-d,
+  author	= {Eide, Kristin M. and {\AA}farli, Tor A.},
+  journal	= {Studia Linguistica},
+  number	= {2},
+  pages		= {155--181},
+  title		= {The {Syntactic} {Disguises} of the {Predication}
+		  {Operator}},
+  volume	= {53},
+  year		= {1999},
+  doi		= {10.1111/1467-9582.00043}
+}
+
+@InProceedings{	  heycock1994the-internal-st,
+  author	= {Heycock, Caroline},
+  booktitle	= {Proceedings of {NELS} 25},
+  pages		= {223--238},
+  title		= {The {Internal} {Structure} of {Small} {Clauses}: {New}
+		  {Evidence} from {Inversion}},
+  year		= {1994}
+}
+
+@Article{	  tanaka2010the-rise-of-a-f,
+  author	= {Tanaka, Tomoyuki and Yokogoshi, Azusa},
+  journal	= {Studia Linguistica},
+  number	= {3},
+  pages		= {239--270},
+  title		= {The rise of a functional category in small clauses},
+  volume	= {64},
+  year		= {2010},
+  doi		= {10.1111/j.1467-9582.2010.01173.x}
+}
+
+@Book{		  aarts2012small-clauses-i,
+  address	= {Berlin, Boston},
+  author	= {Aarts, Bas},
+  edition	= {Reprint 2012},
+  publisher	= {De Gruyter Mouton},
+  title		= {Small {Clauses} in {English}, {The} {Nonverbal} {Types}},
+  year		= {2012},
+  doi		= {10.1515/9783110861457}
+}
+
+@Article{	  citko2011small-clauses,
+  author	= {Citko, Barbara},
+  journal	= {Language and Linguistics Compass},
+  number	= {10},
+  pages		= {748--763},
+  title		= {Small {Clauses}},
+  volume	= {5},
+  year		= {2011},
+  doi		= {10.1111/j.1749-818X.2011.00312.x}
+}
+
+@Article{	  cook1999hawaiian-he-o-a,
+  author	= {Cook, Kenneth William},
+  journal	= {Oceanic Linguistics},
+  number	= {1},
+  pages		= {43--65},
+  title		= {Hawaiian {He}, 'o, and {I}: {Copular} {Verbs},
+		  {Prepositions}, or {Determiners}?},
+  volume	= {38},
+  year		= {1999},
+  doi		= {10.2307/3623392}
+}
+
+@InCollection{	  gelderen2011the-pronominal-,
+  author	= {Gelderen, Elly van},
+  booktitle	= {The Linguistic Cycle: Language Change and the Language
+		  Faculty},
+  publisher	= {Oxford University Press},
+  title		= {The {Pronominal} {Copula} {Cycle}},
+  year		= {2011}
+}
+
+@InCollection{	  lohndal2009copula-cycle,
+  author	= {Lohndal, Terje},
+  booktitle	= {Cyclical Change},
+  editor	= {van Gelderen, Elly},
+  pages		= {209--242},
+  publisher	= {{John Benjamins Pub. Co}},
+  title		= {{The} {Copula} cycle},
+  year		= {2009}
+}
+
+@Article{	  citko2008small-clauses-r,
+  author	= {Citko, Barbara},
+  journal	= {Lingua},
+  number	= {3},
+  pages		= {261--295},
+  title		= {Small clauses reconsidered: {Not} so small and not all
+		  alike},
+  volume	= {118},
+  year		= {2008},
+  doi		= {10.1016/j.lingua.2007.05.009}
+}
+
+@Article{	  hengeveld2009copular-verbs,
+  author	= {Hengeveld, Kees},
+  journal	= {Linguistics},
+  number	= {2},
+  pages		= {393--420},
+  title		= {Copular verbs in a functional grammar of {Spanish}},
+  volume	= {24},
+  year		= {2009},
+  doi		= {10.1515/ling.1986.24.2.393}
+}
+
+@Article{	  lujan1981the-spanish-cop,
+  author	= {Luj{\'a}n, Marta},
+  journal	= {Lingua},
+  number	= {2},
+  pages		= {165--210},
+  title		= {The {Spanish} copulas as aspectual indicators},
+  volume	= {54},
+  year		= {1981},
+  doi		= {10.1016/0024-3841(81)90068-1}
+}
+
+@Article{	  brucart2017copular-alterna,
+  author	= {Brucart, Jos{\'e} Mar{\'i}a},
+  journal	= {Lingu{\'i}stica: Revista de Estudos Lingu{\'i}sticos da
+		  Universidade do Porto},
+  pages		= {9--43},
+  title		= {Copular alternation in {Spanish} and {Catalan} attributive
+		  sentences},
+  volume	= {7},
+  year		= {2017}
+}
+
+@Article{	  sharvit2009revisiting-conn,
+  author	= {Sharvit, Yael},
+  journal	= {Proceedings of {SALT}},
+  pages		= {427--445},
+  title		= {Revisiting {Connectivity} in {Copular} {Sentences}},
+  volume	= {19},
+  year		= {2009},
+  doi		= {10.3765/salt.v19i0.2532}
+}
+
+@Article{	  heller2002on-the-relation,
+  author	= {Heller, Daphna},
+  journal	= {Natural Language Semantics},
+  number	= {4},
+  pages		= {243--284},
+  title		= {On {The} {Relation} of {Connectivity} and
+		  {Specificational} {Pseudoclefts}},
+  volume	= {10},
+  year		= {2002},
+  doi		= {10.1023/A:1022152007523}
+}
+
+@Article{	  doron2009the-semantics-o,
+  author	= {Doron, Edit},
+  journal	= {Linguistics},
+  number	= {2},
+  pages		= {281--302},
+  title		= {The semantics of predicate nominals},
+  volume	= {26},
+  year		= {2009},
+  doi		= {10.1515/ling.1988.26.2.281}
+}
+
+@Article{	  rothstein1999fine-grained-st,
+  author	= {Rothstein, Susan},
+  journal	= {Natural Language Semantics},
+  number	= {4},
+  pages		= {347--420},
+  title		= {{Fine}-{Grained} {Structure} {In} {The} {Eventuality}
+		  {Domain}: {The} {Semantics} {Of} {Predicative} {Adjective}
+		  {Phrases} {And} {Be}},
+  volume	= {7},
+  year		= {1999},
+  doi		= {10.1023/A:1008397810024}
+}
+
+@Article{	  jacobson1995binding-connect,
+  author	= {Jacobson, Pauline},
+  journal	= {Proceedings of {SALT}},
+  pages		= {18},
+  title		= {Binding {Connectivity} in {Copular} {Sentences}},
+  volume	= {4},
+  year		= {1995}
+}
+
+@Book{		  declerck2011studies-on-copu,
+  address	= {Berlin, Boston},
+  author	= {Declerck, Renaat},
+  edition	= {Reprint 2010},
+  publisher	= {De Gruyter Mouton},
+  title		= {Studies on {Copular} {Sentences}, {Clefts} and
+		  {Pseudo}-{Clefts}},
+  year		= {2011},
+  doi		= {10.1515/9783110869330}
+}
+
+@Article{	  bergsma2019mismatches-in-f,
+  author	= {Bergsma, Fenna},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  pages		= {119},
+  title		= {Mismatches in free relatives -- {Grafting} {Nanosyntactic}
+		  trees},
+  volume	= {4},
+  year		= {2019},
+  doi		= {10.5334/gjgl.821}
 }
