--- a/curso-2017-2018.bib
+++ b/curso-2017-2018.bib
@@ -7,7 +7,6 @@
 %% Saved with string encoding Unicode (UTF-8) 
 
 
-
 @incollection{Mendivil-Giro2010Por-debajo-de-l,
 	Abstract = {(Written in Spanish) This approach to the notion of word is anti-lexicalist but does not share the typical conclusion that words are epiphenomena. Quite the contrary, this contribution places the word as a central and distinctive feature of human},
 	Address = {Zaragoza},
@@ -20,11 +19,8 @@
 	Language = {en},
 	Pages = {181-224},
 	Publisher = {Prensas Universitarias de Zaragoza},
-	Title = {Por debajo de la palabra, silencio. {La} sintaxis como interfaz y la naturaleza del l{\'e}xico.},
-	Url = {https://www.academia.edu/887166/Por_debajo_de_la_palabra_silencio._La_sintaxis_como_interfaz_y_la_naturaleza_del_l%C3%A9xico},
-	Urldate = {2019-09-08},
-	Year = {2010},
-	Bdsk-Url-1 = {https://www.academia.edu/887166/Por_debajo_de_la_palabra_silencio._La_sintaxis_como_interfaz_y_la_naturaleza_del_l%C3%A9xico}}
+	Title = {Por debajo de la palabra, silencio. {La} sintaxis como interfaz y la naturaleza del l{\'e}xico},
+	Year = {2010}}
 
 @book{Payrato2018Introduccion-a-,
 	Address = {Madrid},
