result and copulative modified

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,38 @@
+@Article{Emonds1984The-preposition,
+author = {Emonds, Joseph}, 
+title = {The prepositional copula as}, 
+journal = {Linguistic Analysis}, 
+volume = {13}, 
+number = {}, 
+pages = {127--144}, 
+year = {1984}, 
+keywords = {copula; copulative sentences; predication; syntactic change}}
+
+
+
+@InBook{Li1977Mechanismdevelopmentcopula,
+author = {Li, Charles N. and Thompson, Sandra A.}, 
+title = {A Mechanism for the development of copula morphemes}, 
+booktitle = {Mechanisms of syntactic change}, 
+editor = {Li, Charles N.}, 
+publisher = {Univ. of Texas Press}, 
+address = {Austin}, 
+pages = {419-444}, 
+year = {1977}, 
+keywords = {copula; equatives; copulative sentences; syntactic change}}
+
+
+@phdthesis{Rapoport1987Copular-nominal,
+author = {Rapoport, Tova R.}, 
+title = {Copular, nominal, and small clauses: a study of Israeli Hebrew}, 
+school = {Massachusetts Institute of Technology}, 
+address = {Cambridge, Mass.}, 
+pages = {}, 
+year = {1987}, 
+keywords = {copula; equatives; predication; small clauses; copulative sentences}}
+
+
+
 @Book{Declerck2011Studies-on-Copu,
 author = {Declerck, Renaat}, 
 title = {Studies on Copular Sentences, Clefts and Pseudo-Clefts}, 
