--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,33 @@
 
+@Article{	  emonds1984the-preposition,
+  author	= {Emonds, Joseph},
+  journal	= {Linguistic Analysis},
+  pages		= {127--144},
+  title		= {The prepositional copula as},
+  volume	= {13},
+  year		= {1984}
+}
+
+@InCollection{	  li1977mechanismdevelopmentcopula,
+  address	= {Austin},
+  author	= {Li, Charles N. and Thompson, Sandra A.},
+  booktitle	= {Mechanisms of syntactic change},
+  editor	= {Li, Charles N.},
+  pages		= {419--444},
+  publisher	= {Univ. of Texas Press},
+  title		= {A {Mechanism} for the development of copula morphemes},
+  year		= {1977}
+}
+
+@PhDThesis{	  rapoport1987copular-nominal,
+  author	= {Rapoport, Tova R.},
+  school	= {Massachusetts Institute of Technology},
+  type		= {Thesis},
+  title		= {Copular, nominal, and small clauses : a study of {Israeli}
+		  {Hebrew}},
+  year		= {1987}
+}
+
 @PhDThesis{	  schmitt1996aspect,
   author	= {Schmitt, Cristina},
   school	= {University of Maryland},
