--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1213,7 +1213,7 @@
   doi		= {10.1515/9783110377088-021}
 }
 
-@InCollection{	  bentley20179copular-and-,
+@InCollection{	  bentley20179copular-and,
   address	= {Berlin, Boston},
   author	= {Bentley, Delia},
   booktitle	= {Manual of {Romance} {Morphosyntax} and {Syntax}},
@@ -44050,7 +44050,7 @@
   year		= {2013}
 }
 
-@Book{		  2014the-cambridge-h,
+@Book{		  2014the-cambridge-disorder,
   address	= {Cambridge},
   editor	= {Cummings, Louise},
   publisher	= {Cambridge University Press},
