--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -45412,3 +45412,15 @@
   year		= {2019},
   doi		= {10.5334/gjgl.821}
 }
+
+@Article{	  mendivil-giro2019did-language-ev,
+  author	= {Mend{\'i}vil-Gir{\'o}, Jos{\'e}-Luis},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  pages		= {124},
+  title		= {Did language evolve through language change? {On} language
+		  change, language evolution and grammaticalization theory},
+  volume	= {4},
+  year		= {2019},
+  doi		= {10.5334/gjgl.895}
+}
