--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@Article{	  munoz2019the-proprial-ar,
+  author	= {Mu{\~n}oz, Patrick},
+  journal	= {Semantics and Pragmatics},
+  number	= {6},
+  pages		= {EARLY ACCESS},
+  title		= {The proprial article and the semantics of names},
+  volume	= {12},
+  year		= {2019},
+  doi		= {10.3765/sp.12.6}
+}
+
 @Article{	  emonds1984the-preposition,
   author	= {Emonds, Joseph},
   journal	= {Linguistic Analysis},
