--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -45435,3 +45435,26 @@
   year		= {2019},
   doi		= {10.5334/gjgl.895}
 }
+
+@Article{	  buecking2019coercion-by-mod,
+  author	= {Buecking, Sebastian and Maienborn, Claudia},
+  journal	= {Semantics and Pragmatics},
+  pages		= {EARLY ACCESS},
+  title		= {Coercion by modification --- {The} adaptive capacities of
+		  event-sensitive adnominal modifiers},
+  volume	= {12},
+  year		= {2019},
+  doi		= {10.3765/sp.12.9}
+}
+
+@Article{	  scontras2019on-the-grammati,
+  author	= {Scontras, Gregory and Degen, Judith and Goodman, Noah D.},
+  journal	= {Semantics and Pragmatics},
+  number	= {0},
+  pages		= {EARLY ACCESS},
+  title		= {On the grammatical source of adjective ordering
+		  preferences},
+  volume	= {12},
+  year		= {2019},
+  doi		= {10.3765/sp.12.7}
+}
