--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -44771,14 +44771,6 @@
   year		= {2006}
 }
 
-@Article{	  kroll2020polarity-revers,
-  author	= {Kroll, Margaret},
-  journal	= {Semantics and Pragmatics},
-  pages		= {60},
-  title		= {Polarity reversals under sluicing},
-  year		= {2020}
-}
-
 @Book{		  pustejovsky2019the-lexicon,
   address	= {Cambridge},
   author	= {Pustejovsky, James and Batiukova, Olga},
@@ -45457,4 +45449,104 @@
   volume	= {12},
   year		= {2019},
   doi		= {10.3765/sp.12.7}
+}
+
+@Article{	  patel-grosz2019different-again,
+  author	= {Patel-Grosz, Pritty and Beck, Sigrid},
+  journal	= {Semantics and Pragmatics},
+  pages		= {3},
+  title		= {Different again},
+  volume	= {12},
+  year		= {2019},
+  doi		= {10.3765/sp.12.3}
+}
+
+@Article{	  bledin2019what-if-s,
+  author	= {Bledin, Justin and Rawlins, Kyle},
+  journal	= {Semantics and Pragmatics},
+  pages		= {14},
+  title		= {What if s},
+  volume	= {12},
+  year		= {2019},
+  doi		= {10.3765/sp.12.14}
+}
+
+@Article{	  frana2019attitudes-in-di,
+  author	= {Frana, Ilaria and Rawlins, Kyle},
+  journal	= {Semantics and Pragmatics},
+  number	= {0},
+  pages		= {16},
+  title		= {Attitudes in discourse: {Italian} polar questions and the
+		  particle mica},
+  volume	= {12},
+  year		= {2019},
+  doi		= {10.3765/sp.12.16}
+}
+
+@Article{	  kroll2019polarity-revers,
+  author	= {Kroll, Margaret},
+  journal	= {Semantics and Pragmatics},
+  pages		= {18},
+  title		= {Polarity reversals under sluicing},
+  volume	= {12},
+  year		= {2019},
+  doi		= {10.3765/sp.12.18}
+}
+
+@Article{	  abenina-adar2019know-whether-an,
+  author	= {Abenina-Adar, Maayan},
+  journal	= {Semantics and Pragmatics},
+  pages		= {19},
+  title		= {Know whether and -ever free relative clauses},
+  volume	= {12},
+  year		= {2019},
+  doi		= {10.3765/sp.12.19}
+}
+
+@Article{	  goldstein2019free-choice-and,
+  author	= {Goldstein, Simon},
+  journal	= {Semantics and Pragmatics},
+  pages		= {23},
+  title		= {Free choice and homogeneity},
+  volume	= {12},
+  year		= {2019},
+  doi		= {10.3765/sp.12.23}
+}
+
+@Article{	  steinert-threlkeld2019learnability-an,
+  author	= {Steinert-Threlkeld, Shane and Szymanik, Jakub},
+  journal	= {Semantics and Pragmatics},
+  title		= {Learnability and semantic universals},
+  volume	= {12},
+  year		= {2019},
+  doi		= {10.3765/sp.12.4}
+}
+
+@Article{	  champollion2019donkeys-under-d,
+  author	= {Champollion, Lucas and Bumford, Dylan and Henderson,
+		  Robert},
+  journal	= {Semantics and Pragmatics},
+  title		= {Donkeys under discussion},
+  volume	= {12},
+  year		= {2019},
+  doi		= {10.3765/sp.12.1}
+}
+
+@Article{	  farkas2019polarity-partic,
+  author	= {Farkas, Donka F. and Roelofsen, Floris},
+  journal	= {Semantics and Pragmatics},
+  title		= {Polarity particles revisited},
+  volume	= {12},
+  year		= {2019},
+  doi		= {10.3765/sp.12.15}
+}
+
+@Article{	  fusco2019sluicing-on-fre,
+  author	= {Fusco, Melissa},
+  journal	= {Semantics and Pragmatics},
+  pages		= {20},
+  title		= {Sluicing on free choice},
+  volume	= {12},
+  year		= {2019},
+  doi		= {10.3765/sp.12.20}
 }
