--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -45550,3 +45550,12 @@
   year		= {2019},
   doi		= {10.3765/sp.12.20}
 }
+
+@Article{	  bale2019proportional-re,
+  author	= {Bale, Alan and Schwarz, Bernhard},
+  journal	= {Linguistics and Philosophy},
+  title		= {Proportional readings of many and few: the case for an
+		  underspecified measure function},
+  year		= {2019},
+  doi		= {10.1007/s10988-019-09284-5}
+}
