--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -45559,3 +45559,126 @@
   year		= {2019},
   doi		= {10.1007/s10988-019-09284-5}
 }
+
+@Article{	  antoniou2019the-advantages-,
+  author	= {Antoniou, Mark},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {395--415},
+  title		= {The {Advantages} of {Bilingualism} {Debate}},
+  volume	= {5},
+  year		= {2019},
+  doi		= {10.1146/annurev-linguistics-011718-011820}
+}
+
+@Article{	  thomason2020fantastic-lingu,
+  author	= {Thomason, Sarah and Poser, William},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  title		= {Fantastic {Linguistics}},
+  volume	= {6},
+  year		= {2020},
+  doi		= {10.1146/annurev-linguistics-011619-030459}
+}
+
+@Article{	  nevins2019closest-conjunc,
+  author	= {Nevins, Andrew and Weisser, Philipp},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {219--241},
+  title		= {Closest {Conjunct} {Agreement}},
+  volume	= {5},
+  year		= {2019},
+  doi		= {10.1146/annurev-linguistics-011718-012708}
+}
+
+@Article{	  espinal2019response-system,
+  author	= {Espinal, M.Teresa and Tubau, Susagna},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {261--287},
+  title		= {Response {Systems}: {The} {Syntax} and {Semantics} of
+		  {Fragment} {Answers} and {Response} {Particles}},
+  volume	= {5},
+  year		= {2019},
+  doi		= {10.1146/annurev-linguistics-011718-012613}
+}
+
+@Article{	  wechsler2020the-role-of-the,
+  author	= {Wechsler, Stephen},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  title		= {The {Role} of the {Lexicon} in the {Syntax}--{Semantics}
+		  {Interface}},
+  volume	= {6},
+  year		= {2020},
+  doi		= {10.1146/annurev-linguistics-011619-030349}
+}
+
+@Article{	  boleda2020distributional-,
+  author	= {Boleda, Gemma},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  title		= {Distributional {Semantics} and {Linguistic} {Theory}},
+  volume	= {6},
+  year		= {2020},
+  doi		= {10.1146/annurev-linguistics-011619-030303}
+}
+
+@Article{	  hohaus2020the-grammar-of-,
+  author	= {Hohaus, Vera and Bochnak, M. Ryan},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  title		= {The {Grammar} of {Degree}: {Gradability} {Across}
+		  {Languages}},
+  volume	= {6},
+  year		= {2020},
+  doi		= {10.1146/annurev-linguistics-011718-012009}
+}
+
+@Article{	  gleitman2019the-impossibili,
+  author	= {Gleitman, Lila R. and Liberman, Mark Y. and McLemore,
+		  Cynthia A. and Partee, Barbara H.},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {1--24},
+  title		= {The {Impossibility} of {Language} {Acquisition} (and {How}
+		  {They} {Do} {It})},
+  volume	= {5},
+  year		= {2019},
+  doi		= {10.1146/annurev-linguistics-011718-011640}
+}
+
+@Article{	  champollion2019distributivity-,
+  author	= {Champollion, Lucas},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {289--308},
+  title		= {Distributivity in {Formal} {Semantics}},
+  volume	= {5},
+  year		= {2019},
+  doi		= {10.1146/annurev-linguistics-011718-012528}
+}
+
+@Article{	  abrusan2019semantic-anomal,
+  author	= {Abrus{\'a}n, M{\'a}rta},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {329--351},
+  title		= {Semantic {Anomaly}, {Pragmatic} {Infelicity}, and
+		  {Ungrammaticality}},
+  volume	= {5},
+  year		= {2019},
+  doi		= {10.1146/annurev-linguistics-011718-011938}
+}
+
+@Article{	  lowe2019the-syntax-and-,
+  author	= {Lowe, John J.},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {309--328},
+  title		= {The {Syntax} and {Semantics} of {Nonfinite} {Forms}},
+  volume	= {5},
+  year		= {2019},
+  doi		= {10.1146/annurev-linguistics-011718-012545}
+}
