--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -45682,3 +45682,22 @@
   year		= {2019},
   doi		= {10.1146/annurev-linguistics-011718-012545}
 }
+
+@Article{	  simik2019doubling-uncond,
+  author	= {{\v S}im{\'i}k, Radek},
+  journal	= {Natural Language Semantics},
+  title		= {Doubling unconditionals and relative sluicing},
+  year		= {2019},
+  doi		= {10.1007/s11050-019-09157-4}
+}
+
+@Article{	  rawlins2013unconditionals,
+  author	= {Rawlins, Kyle},
+  journal	= {Natural Language Semantics},
+  number	= {2},
+  pages		= {111--178},
+  title		= {({Un})conditionals},
+  volume	= {21},
+  year		= {2013},
+  doi		= {10.1007/s11050-012-9087-0}
+}
