result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,16 @@
+@Article{Geist2019Predication-ove,
+author = {Geist, Ljudmila}, 
+title = {Predication over aspects of human individuals}, 
+journal = {Linguistics}, 
+volume = {Earlyy access}, 
+number = {}, 
+pages = {}, 
+year = {2019}, 
+location = {}, 
+keywords = {nonverbal predication; predicate noun; predication; copula}}
+
+
+
 @Article{Emonds1984The-preposition,
 author = {Emonds, Joseph}, 
 title = {The prepositional copula as}, 
