--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -45701,3 +45701,11 @@
   year		= {2013},
   doi		= {10.1007/s11050-012-9087-0}
 }
+
+@Article{	  geist2019predication-ove,
+  author	= {Geist, Ljudmila},
+  journal	= {Linguistics},
+  title		= {Predication over aspects of human individuals},
+  year		= {2019},
+  doi		= {10.1515/ling-2019-0028}
+}
