result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,13 +1,3 @@
-@Article{Geist2019Predication-ove,
-author = {Geist, Ljudmila}, 
-title = {Predication over aspects of human individuals}, 
-journal = {Linguistics}, 
-volume = {Earlyy access}, 
-number = {}, 
-pages = {}, 
-year = {2019}, 
-location = {}, 
-keywords = {nonverbal predication; predicate noun; predication; copula}}
 
 
 
@@ -20,6 +10,18 @@ number = {},
 pages = {127--144}, 
 year = {1984}, 
 keywords = {copula; copulative sentences; predication; syntactic change}}
+
+
+@Article{Geist2019Predication-ove,
+author = {Geist, Ljudmila},  
+title = {Predication over aspects of human individuals}, 
+journal = {Linguistics}, 
+volume = {}, 
+number = {}, 
+pages = {}, 
+year = {2019}, 
+location = {}, 
+keywords = {nonverbal predication; predicate noun; predication; copula}}
 
 
 
@@ -1470,7 +1472,7 @@ location = {},
 keywords = {Copular sentences, copula, Specificational sentences, Small Clause, Predication}}
 
 
-@Proceedings{Geist2006Copular-sentenc,
+@InBook{Geist2006Copular-sentenc,
 author = {Geist, Ljudmila}, 
 editor = {Ebert, Christian and Endriss, Cornelia}, 
 title = {Copular sentences in russian vs. spanish at the syntax--semantics interface}, 
