--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -45709,3 +45709,12 @@
   year		= {2019},
   doi		= {10.1515/ling-2019-0028}
 }
+
+@Article{	  fabregas2019on-inhibited-ev,
+  author	= {F{\'a}bregas, Antonio and Gonz{\'a}lez Rodr{\'i}guez,
+		  Raquel},
+  journal	= {Natural Language \& Linguistic Theory},
+  title		= {On inhibited eventualities},
+  year		= {2019},
+  doi		= {10.1007/s11049-019-09461-y}
+}
