--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -3481,14 +3481,6 @@
   doi		= {10.5935/2079-312X.20170002}
 }
 
-@Unpublished{	  bosque2017la-gramatica-en,
-  address	= {UCM/UAB},
-  author	= {Bosque, Ignacio and Gallego, {\'A}ngel},
-  title		= {La gram{\'a}tica en la {Ense{\~n}anza} {Media}.
-		  {Competencias} oficiales y competencias necesarias},
-  year		= {2017}
-}
-
 @Book{		  quirk1985a-comprehensive,
   address	= {London ; New York},
   author	= {Quirk, Randolph and Greenbaum, Sidney and Leech, Geoffrey
@@ -45717,4 +45709,64 @@
   title		= {On inhibited eventualities},
   year		= {2019},
   doi		= {10.1007/s11049-019-09461-y}
+}
+
+@Article{	  bosque2020la-terminologia,
+  author	= {Bosque, Ignacio and Gallego, {\'A}ngel J},
+  journal	= {El estudio del lenguaje en el siglo XXI: enfoques
+		  formales. Revista de la Sociedad Espa{\~n}ola de
+		  Ling{\"u}{\'i}stica},
+  pages		= {29},
+  title		= {La terminolog{\'i}a gramatical en {Secundaria} y
+		  {Bachillerato}. {Ventajas} e inconvenientes did{\'a}cticos
+		  de algunos conceptos gramaticales antiguos y modernos},
+  year		= {2020}
+}
+
+@Article{	  gallego2020the-faculty-of,
+  author	= {Gallego, {\'A}ngel J and Chomsky, Noam},
+  journal	= {El estudio del lenguaje en el siglo XXI: enfoques
+		  formales. Revista de la Sociedad Espa{\~n}ola de
+		  Ling{\"u}{\'i}stica},
+  pages		= {25},
+  title		= {The {Faculty} of {Language}},
+  year		= {2020}
+}
+
+@Article{	  bosque2018la-gramatica-en,
+  author	= {Bosque, Ignacio and Gallego, {\'A}ngel J.},
+  journal	= {ReGroc. Revista de Gram{\'a}tica Orientada a las
+		  Competencias},
+  number	= {1},
+  pages		= {141--202},
+  title		= {La gram{\'a}tica en la {Ense{\~n}anza} {Media}.
+		  {Competencias} oficiales y competencias necesarias},
+  volume	= {1},
+  year		= {2018},
+  doi		= {10.5565/rev/regroc.20}
+}
+
+@Article{	  bosque2018que-debemos-cam,
+  author	= {Bosque, Ignacio},
+  journal	= {ReGroc. Revista de Gram{\'a}tica Orientada a las
+		  Competencias},
+  number	= {1},
+  pages		= {11--36},
+  title		= {Qu{\'e} debemos cambiar en la ense{\~n}anza de la
+		  gram{\'a}tica},
+  volume	= {1},
+  year		= {2018},
+  doi		= {10.5565/rev/regroc.12}
+}
+
+@Article{	  torrego2010variability-in,
+  author	= {Torrego, Esther},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {445--470},
+  title		= {Variability in the {Case} {Patterns} of {Causative}
+		  {Formation} in {Romance} and {Its} {Implications}},
+  volume	= {41},
+  year		= {2010},
+  doi		= {10.1162/LING_a_00004}
 }
