--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,23 @@
 
+@Book{		  2018language-syntax,
+  publisher	= {Cambridge University Press},
+  title		= {Language, Syntax, and the Natural Sciences},
+  year		= {2018},
+  doi		= {10.1017/9781316591529}
+}
+
+@InBook{	  chomsky2018science-mind-an,
+  address	= {Cambridge ; New York},
+  author	= {Chomsky, Noam},
+  booktitle	= {Language, Syntax, and the Natural Sciences},
+  editor	= {Gallego, {\'A}ngel J. and Martin, Roger},
+  pages		= {351---362},
+  publisher	= {Cambridge University Press},
+  title		= {Science, Mind, and Limits of Understanding},
+  year		= {2018},
+  doi		= {10.1017/9781316591529.019}
+}
+
 @Article{	  munoz2019the-proprial-ar,
   author	= {Mu{\~n}oz, Patrick},
   journal	= {Semantics and Pragmatics},
