result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,41 @@
+@Article{Romero2008The-Temperature-Parb,
+author = {Romero, Maribel}, 
+title = {The Temperature Paradox and Temporal Interpretation}, 
+journal = {Linguistic Inquiry}, 
+volume = {39}, 
+number = {4}, 
+pages = {655--667}, 
+year = {2008}, 
+abstract = {}, 
+location = {}, 
+keywords = {temperature paradox; Gupta’s syllogism; intensionality; individual concept; temporal interpretation; specificational sentences; copula; copulative}}
+
+
+
+@Article{Romero2005Concealed-Quesu,
+author = {Romero, Maribel}, 
+title = {Concealed Questions and Specificational Subjects}, 
+journal = {Linguistics and Philosophy}, 
+volume = {28}, 
+number = {6}, 
+pages = {687--737}, 
+year = {2005}, 
+abstract = {}, 
+location = {}, 
+keywords = {questions; specificational sentences; copula; copulative sentences}}
+
+
+
+@Article{Arregi2019Three-arguments,
+author = {Arregi, Karlos and Francez, Itamar and Martinovic, Martina}, 
+title = {Three arguments for an individual concept analysis of Specificational sentences}, 
+journal = {Submitted}, 
+volume = {}, 
+number = {}, 
+pages = {}, 
+year = {2019}, 
+keywords = {copula; Specificational sentences; copulatives}}
+
 
 
 
