--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -19771,7 +19771,7 @@
 }
 
 @Article{	  romero2005concealed-quest,
-  author	= {Maribel Romero},
+  author	= {Romero, Maribel},
   journal	= {Linguistics and Philosophy},
   number	= {6},
   pages		= {687--737},
@@ -45788,4 +45788,13 @@
   volume	= {41},
   year		= {2010},
   doi		= {10.1162/LING_a_00004}
+}
+
+@Article{	  arregi2019three-arguments,
+  author	= {Arregi, Karlos and Francez, Itamar and Martinovic,
+		  Martina},
+  journal	= {Submitted},
+  title		= {Three arguments for an individual concept analysis of
+		  {Specificational} sentences},
+  year		= {2019}
 }
