--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -45798,3 +45798,23 @@
 		  {Specificational} sentences},
   year		= {2019}
 }
+
+@Article{	  crnic2019any-logic-likea,
+  author	= {Crni{\v c}, Luka},
+  journal	= {Language and Linguistics Compass},
+  number	= {11},
+  title		= {Any: {Logic}, likelihood, and context ({Pt}. 1)},
+  volume	= {13},
+  year		= {2019},
+  doi		= {10.1111/lnc3.12354}
+}
+
+@Article{	  crnic2019any-logic-likeb,
+  author	= {Crni{\v c}, Luka},
+  journal	= {Language and Linguistics Compass},
+  number	= {11},
+  title		= {Any: {Logic}, likelihood, and context ({Pt}. 2)},
+  volume	= {13},
+  year		= {2019},
+  doi		= {10.1111/lnc3.12353}
+}
