--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@Book{		  dworkin2018,
+  author	= {Dworkin, Steven N.},
+  publisher	= {OUP Oxford},
+  title		= {A Guide to Old Spanish},
+  year		= {2018}
+}
+
 @Book{		  2018language-syntax,
   publisher	= {Cambridge University Press},
   title		= {Language, Syntax, and the Natural Sciences},
