--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,17 @@
+@Article{Danon2012Nothing-to-Agre,
+author = {Danon, Gabi}, 
+title = {Nothing to Agree on: Non-agreeing subjects of copular clauses in Hebrew}, 
+journal = {Acta Linguistica Hungarica}, 
+volume = {59}, 
+number = {1--2}, 
+pages = {85--108}, 
+year = {2012}, 
+abstract = {}, 
+location = {}, 
+keywords = {agreement; features index; concord; copula; predicate; copulative}}
+
+
+
 @Article{Romero2008The-Temperature-Parb,
 author = {Romero, Maribel}, 
 title = {The Temperature Paradox and Temporal Interpretation}, 
