--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,16 @@
 
+@Article{	  danon2012nothing-to-agre,
+  author	= {Danon, Gabi},
+  journal	= {Acta Linguistica Hungarica},
+  number	= {1--2},
+  pages		= {85--108},
+  title		= {Nothing to Agree on: Non-agreeing subjects of copular
+		  clauses in {Hebrew}},
+  volume	= {59},
+  year		= {2012},
+  doi		= {10.1556/ALing.59.2012.1-2.4}
+}
+
 @Book{		  dworkin2018,
   author	= {Dworkin, Steven N.},
   publisher	= {OUP Oxford},
