result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,45 @@
+@InBook{Querido1976The-Semantics-o,
+author = {Querido, Antonio}, 
+title = {The Semantics of Copulative Constructions in Portuguese}, 
+booktitle = {Current studies in Romance linguistics}, 
+editor = {Luj\’an, Marta and Hensey, Fritz}, 
+publisher = {Georgetown University Press}, 
+address = {Georgetown}, 
+pages = {343-366}, 
+year = {1976}, 
+abstract = {}, 
+keywords = {copula; copulative sentences; copula choice; portuguese}}
+
+
+@Article{Clements1988The-semantics-a,
+author = {Clements, J. Clancy}, 
+title = {The semantics and pragmatics of the Spanish construction}, 
+journal = {Linguistics}, 
+volume = {26}, 
+number = {5}, 
+pages = {}, 
+year = {1988}, 
+abstract = {}, 
+location = {}, 
+keywords = {copula; copula choice; copulative sentences; ser; estar}}
+
+
+
+
+@Article{Maienborn2007Pustet-Copulas,
+author = {Maienborn, Claudia}, 
+title = {Regina Pustet 2003. Copulas. Universals in the Categorization of the Lexicon.}, 
+journal = {Studies in Language}, 
+volume = {31}, 
+number = {1}, 
+pages = {232--244}, 
+year = {2007}, 
+abstract = {}, 
+location = {}, 
+keywords = {copula; copula choice; copulative sentences; ser; estar}}
+
+
+
 @Article{Danon2012Nothing-to-Agre,
 author = {Danon, Gabi}, 
 title = {Nothing to Agree on: Non-agreeing subjects of copular clauses in Hebrew}, 
