--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@InCollection{	  querido1976the-semantics-o,
+  address	= {Georgetown},
+  author	= {Querido, Antonio},
+  booktitle	= {Current studies in Romance linguistics},
+  editor	= {Luj{\'a}n, Marta and Hensey, Fritz},
+  pages		= {343--366},
+  publisher	= {Georgetown University Press},
+  title		= {The Semantics of Copulative Constructions in Portuguese},
+  year		= {1976}
+}
+
 @Article{	  danon2012nothing-to-agre,
   author	= {Danon, Gabi},
   journal	= {Acta Linguistica Hungarica},
@@ -45836,4 +45847,27 @@
   volume	= {13},
   year		= {2019},
   doi		= {10.1111/lnc3.12353}
+}
+
+@Article{	  maienborn2007pustet-copulas,
+  author	= {Maienborn, Claudia},
+  journal	= {Studies in Language},
+  number	= {1},
+  pages		= {232--244},
+  title		= {Regina {Pustet} 2003. \textit{{Copulas}. {Universals} in
+		  the {Categorization} of the {Lexicon}.}},
+  volume	= {31},
+  year		= {2007},
+  doi		= {10.1075/sl.31.1.12mai}
+}
+
+@Article{	  clements1988the-semantics-a,
+  author	= {Clements, J. Clancy},
+  journal	= {Linguistics},
+  number	= {5},
+  title		= {The semantics and pragmatics of the {Spanish}
+		  construction},
+  volume	= {26},
+  year		= {1988},
+  doi		= {10.1515/ling.1988.26.5.779}
 }
