result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,16 @@
+@Article{Ramos2001Els-derivats-dE,
+author = {Ramos, Joan-Rafael}, 
+title = {Els derivats d›Esse i Stare en les llengües romàniques}, 
+journal = {Caplletra: Revista Internacional de Filologia}, 
+volume = {30}, 
+number = {135}, 
+pages = {}, 
+year = {2001}, 
+location = {}, 
+keywords = {copula choice; copula; copulative sentences; ser; estar; Catalan}}
+
+
+
 @InBook{Querido1976The-Semantics-o,
 author = {Querido, Antonio}, 
 title = {The Semantics of Copulative Constructions in Portuguese}, 
