--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -40948,8 +40948,8 @@
   year		= {1987}
 }
 
-@Article{	  ramos-alfajarin2013norma-y-variaci,
-  author	= {Ramos Alfajar{\'i}n, Joan-Rafael},
+@Article{	  ramos2013norma-y-variaci,
+  author	= {Ramos, Joan-Rafael},
   journal	= {Normas: revista de estudios ling{\"u}{\'i}sticos
 		  hisp{\'a}nicos},
   pages		= {127-160},
@@ -45870,4 +45870,14 @@
   volume	= {26},
   year		= {1988},
   doi		= {10.1515/ling.1988.26.5.779}
+}
+
+@Article{	  ramos2001els-derivats-de,
+  author	= {Ramos, Joan-Rafael},
+  journal	= {Caplletra: Revista Internacional de Filologia},
+  number	= {135},
+  title		= {Els derivats d'{Esse} i {Stare} en les lleng{\"u}es
+		  rom{\`a}niques},
+  volume	= {30},
+  year		= {2001}
 }
