result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,6 +1,17 @@
+@InBook{RAE-ASALE2009El-atributo-I,
+author = {RAE-ASALE}, 
+title = {El atributo (I). Clases de expresiones predicativas. El atributo en las oraciones copulativas}, 
+booktitle = {Nueva Gramática de la Lengua Española}, 
+publisher = {Espasa-Calpe-RAE}, 
+address = {Madrid}, 
+pages = {2773-2834}, 
+year = {2009}, 
+keywords = {copula choice; copulative sentences; copula; ser; estar; predication}}
+
+
 @Article{Ramos2001Els-derivats-dE,
 author = {Ramos, Joan-Rafael}, 
-title = {Els derivats d›Esse i Stare en les llengües romàniques}, 
+title = {Els derivats d'Esse i Stare en les llengües romàniques}, 
 journal = {Caplletra: Revista Internacional de Filologia}, 
 volume = {30}, 
 number = {135}, 
@@ -15,7 +26,7 @@ keywords = {copula choice; copula; copulative sentences; ser; estar; Catalan}}
 author = {Querido, Antonio}, 
 title = {The Semantics of Copulative Constructions in Portuguese}, 
 booktitle = {Current studies in Romance linguistics}, 
-editor = {Luj\’an, Marta and Hensey, Fritz}, 
+editor = {Luj{\'a}n, Marta and Hensey, Fritz}, 
 publisher = {Georgetown University Press}, 
 address = {Georgetown}, 
 pages = {343-366}, 
@@ -1237,7 +1248,6 @@ volume = {3},
 number = {1}, 
 pages = {63--83}, 
 year = {2006}, 
-abstract = {Although ser and estar have been studied extensively (Luján 1981; Clements 1988; Leonetti 1994; Fernández Leborans 1999; Geeslin 2005), less is known about how the use of these copulas varies from one Spanish-speaking region to another. To date, sociolinguistic research has been conducted on Spanish in the United States (Kirschner and Stephens 1988; Silva-Corvalán 1994), in Mexico (Gutiérrez 1992), and in Venezuela (de Jonge 1993), showing that some features (i.e. adjective class, frame of reference and susceptibility to change) can affect copula choice in Spanish. The current study extends this body of research to the Spanish spoken in Galicia, where both Spanish and Galician co-exist. Our statistical analysis of a group of 56 intergenerational participants examines both social and linguistic variables as indicators of trends in language variation in relation to copula choice. Our findings support previous studies and contribute new knowledge of copula use in Galicia and of language change in a contact situation.}, 
 location = {}, 
 keywords = {Bilingualism, Copula Choice, Language contact, Language Variation, Social and Linguistics Variables}}
 
