--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,26 @@
 
+@InCollection{	  leborans1999predicacion,
+  address	= {Madrid},
+  author	= {Fern{\'a}ndez Leborans, Mar{\'i}a Jos{\'e}},
+  booktitle	= {Gram{\'a}tica Descriptiva de la Lengua Espa{\~n}ola},
+  editor	= {Bosque, Ignacio and Demonte, Violeta},
+  pages		= {2354--2460},
+  publisher	= {Espasa-RAE},
+  title		= {La predicaci{\'o}n: las oraciones copulativas},
+  year		= {1999}
+}
+
+@InCollection{	  rae-asale2009el-atributo-i,
+  author	= {{RAE-ASALE}},
+  booktitle	= {{N}ueva {G}ram{\'a}tica de la {L}engua {E}spa{\~n}ola},
+  chapter	= {37},
+  pages		= {2773--2834},
+  publisher	= {Espasa-Calpe-RAE},
+  title		= {El atributo {(I)}. Clases de expresiones predicativas. El
+		  atributo en las oraciones copulativas},
+  year		= {2009}
+}
+
 @InCollection{	  querido1976the-semantics-o,
   address	= {Georgetown},
   author	= {Querido, Antonio},
