result-reduced copulative

--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,33 @@
 
+@InCollection{	  partee2008ambiguous-pseud,
+  author	= {Partee, Barbara H},
+  booktitle	= {Compositionality in {Formal} {Semantics}},
+  pages		= {190--202},
+  publisher	= {John Wiley \& Sons},
+  title		= {Ambiguous {Pseudoclefts} with {Unambiguous} {Be}},
+  year		= {2008},
+  doi		= {10.1002/9780470751305.ch9}
+}
+
+@InCollection{	  partee1998copula-inversio,
+  author	= {Partee, Barbara H},
+  booktitle	= {{UMOP} 23: {Issues} in {Semantics} and its {Interface}},
+  editor	= {Kusumoto, Kiyomi and Villalta, Elisabeth},
+  pages		= {198--208},
+  title		= {Copula {Inversion} {Puzzles} in {English} and {Russian}},
+  year		= {1998}
+}
+
+@Article{	  partee2010specificational,
+  author	= {Partee, Barbara H},
+  journal	= {Oslo Studies in Language},
+  number	= {1},
+  title		= {Specificational {Copular} {Sentences} in {Russian} and
+		  {English}},
+  volume	= {2},
+  year		= {2010}
+}
+
 @InCollection{	  leborans1999predicacion,
   address	= {Madrid},
   author	= {Fern{\'a}ndez Leborans, Mar{\'i}a Jos{\'e}},
