--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,46 @@
+@InBook{Partee1998CopulaInversionPuzzles,
+author = {Partee, Barbara H}, 
+title = {Copula Inversion Puzzles in English and Russian}, 
+booktitle = {{UMOP} 23: Issues in Semantics and its Interface}, 
+editor = {Kusumoto, Kiyomi and Villalta, Elisabeth}, 
+publisher = {}, 
+address = {}, 
+pages = {198-208}, 
+year = {1998}, 
+abstract = {}, 
+keywords = {copula; predication; copulative sentences; specificational}}
+
+
+
+@InBook{Partee2008AmbiguousPseudocleftsUnambiguous,
+author = {Partee, Barbara H}, 
+title = {Ambiguous Pseudoclefts with Unambiguous Be}, 
+booktitle = {Compositionality in Formal Semantics}, 
+editor = {}, 
+publisher = {John Wiley \& Sons}, 
+address = {}, 
+pages = {190-202}, 
+year = {2008}, 
+abstract = {This chapter contains section titled: Introduction The Uniform Be Theory Type-shifting Principles Quantifying into and Relativizing out of Pred NP Position The Pseudoclefts Polymorphic Types and Be Conclusion}, 
+keywords = {copula; copulative sentences; predication; specificational}}
+
+
+
+@Article{Partee2010Specificational,
+author = {Partee, Barbara H}, 
+title = {Specificational Copular Sentences in Russian and English}, 
+journal = {Oslo Studies in Language}, 
+volume = {2}, 
+number = {1}, 
+pages = {}, 
+year = {2010}, 
+abstract = {}, 
+location = {}, 
+keywords = {copula; predication; copulative sentences; specificational}}
+
+
+
+
 @InBook{RAE-ASALE2009El-atributo-I,
 author = {RAE-ASALE}, 
 title = {El atributo (I). Clases de expresiones predicativas. El atributo en las oraciones copulativas}, 
